Add pagination with dynamic filters, GlobalExceptionHandler, bean validation and @Transactional
- GlobalExceptionHandler centralizes error handling (DomainException→422, DinosaurNotFoundException→404, generic→500)
- Bean validation on DinosaurRequest (@NotBlank, @NotNull) with @Valid in controller returning 400 on invalid input
- @Transactional on DinosaurService write methods, @Transactional(readOnly=true) on reads
- GET /dinosaur now supports pagination (page/size) and optional dynamic filters by status and species via JpaSpecificationExecutor
- PagedResponse DTO wraps paginated results with content, page, size, totalElements, totalPages
- DinosaurSpecification builds predicates dynamically — unused filters produce no SQL clause
- application.properties migrated to env vars with defaults for datasource, RabbitMQ and scheduler

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>